Backend code ready

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ MONGODB_URI=mongodb+srv://samyakfb27:yevdMrtl4usv7Vd6@cluster0.emrza.mongodb.net
 PORT=5001
 JWT_SECRET=mysecretkey
 NODE_ENV=development
+CLOUDINARY_CLOUD_NAME=dvd9cfz0u
+CLOUDINARY_API_KEY=391999893244938
+CLOUDINARY_API_SECRET=f6i1WrPvdBO2XAqqRyGXTHRHpoo
