--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
+    "chatapp": "file:..",
     "lucide-react": "^0.476.0",
     "postcss-cli": "^11.0.0",
     "react": "^19.0.0",
